--- a/MyPage/skinset.html
+++ b/MyPage/skinset.html
@@ -253,6 +253,7 @@
                       <button type="button" class="btn btn-del">삭제</button>
                     </div>
                   </div>
+                  <p class="txt-info w-full left">※최소 1명, 최대 20명까지 등록가능 합니다.</p>
                 </td>
               </tr>
               <tr>
@@ -349,7 +350,7 @@
                 </td>
               </tr>
               <tr>
-                <th>계좌정보</th>
+                <th>정산계좌</th>
                 <td class="flx-wrap">
                   <div class="form-row acc-row">
                     <select name="" title="은행선택" class="col-md-4">
@@ -383,7 +384,78 @@
                     <input type="text" class="col-6 col-md-8" placeholder="계좌번호" title="계좌번호" />
                     <input type="text" class="col-md-12" placeholder="예금주" title="예금주" />
                   </div>
-                  <p class="txt-info w-full left">※조의금을 받기위한 계좌정보를 입력해주세요.</p>
+                </td>
+              </tr>
+              <tr>
+                <th>무통장입금계좌</th>
+                <td class="flx-wrap add-dle-acc">
+                  <div class="form-row acc-row">
+                    <select name="" title="은행선택" class="col-md-4">
+                      <option value="1">우리은행</option>
+                      <option value="2">국민은행</option>
+                      <option value="3">기업은행</option>
+                      <option value="4">농협은행</option>
+                      <option value="5">신한은행</option>
+                      <option value="6">KEB하나은행</option>
+                      <option value="7">한국씨티은행</option>
+                      <option value="8">SC제일은행</option>
+                      <option value="9">경남은행</option>
+                      <option value="10">광주은행</option>
+                      <option value="11">대구은행</option>
+                      <option value="12">도이체뱅크</option>
+                      <option value="13">부산은행</option>
+                      <option value="14">비엔피파리바은행</option>
+                      <option value="15">산림조합은행</option>
+                      <option value="16">산업은행</option>
+                      <option value="17">새마을금고은행</option>
+                      <option value="18">수출입은행</option>
+                      <option value="19">수협은행</option>
+                      <option value="20">신협은행</option>
+                      <option value="21">우체국은행</option>
+                      <option value="22">저축은행</option>
+                      <option value="23">제주은행</option>
+                      <option value="24">카카오뱅크</option>
+                      <option value="25">케이뱅크</option>
+                      <option value="26">전북은행</option>
+                    </select>
+                    <input type="text" class="col-6 col-md-8" placeholder="계좌번호" title="계좌번호" />
+                    <input type="text" class="col-md-12" placeholder="예금주" title="예금주" />
+                    <button type="button" class="btn btn-regular btn-add">추가</button>
+                  </div>
+                  <div class="form-row acc-row added">
+                    <select name="" title="은행선택" class="col-md-4">
+                      <option value="1">우리은행</option>
+                      <option value="2">국민은행</option>
+                      <option value="3">기업은행</option>
+                      <option value="4">농협은행</option>
+                      <option value="5">신한은행</option>
+                      <option value="6">KEB하나은행</option>
+                      <option value="7">한국씨티은행</option>
+                      <option value="8">SC제일은행</option>
+                      <option value="9">경남은행</option>
+                      <option value="10">광주은행</option>
+                      <option value="11">대구은행</option>
+                      <option value="12">도이체뱅크</option>
+                      <option value="13">부산은행</option>
+                      <option value="14">비엔피파리바은행</option>
+                      <option value="15">산림조합은행</option>
+                      <option value="16">산업은행</option>
+                      <option value="17">새마을금고은행</option>
+                      <option value="18">수출입은행</option>
+                      <option value="19">수협은행</option>
+                      <option value="20">신협은행</option>
+                      <option value="21">우체국은행</option>
+                      <option value="22">저축은행</option>
+                      <option value="23">제주은행</option>
+                      <option value="24">카카오뱅크</option>
+                      <option value="25">케이뱅크</option>
+                      <option value="26">전북은행</option>
+                    </select>
+                    <input type="text" class="col-6 col-md-8" placeholder="계좌번호" title="계좌번호" />
+                    <input type="text" class="col-md-12" placeholder="예금주" title="예금주" />
+                    <button type="button" class="btn btn-del">삭제</button>
+                  </div>
+                  <p class="txt-info w-full left">※최소 1개, 최대 5개까지 등록가능합니다.</p>
                 </td>
               </tr>
               <tr>
