--- a/skin/guest.html
+++ b/skin/guest.html
@@ -25,11 +25,10 @@
   <link rel="stylesheet" href="/skin/css/skin.css">
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
-  <script src="//naver.github.io/egjs-infinitegrid/release/latest/dist/infinitegrid.gridlayout.min.js"></script>
   <script src="/skin/js/skin.js"></script>
 </head>
 <body class="">
-  <div class="wrap">
+  <div class="wrap fix-btm">
     <header class="header">
       <div class="fix-box">
         <a href="" class="btn-back"><span></span></a>
@@ -72,56 +71,37 @@
         </div>
       </header>
       <div class="contents">
-        <h2 class="con-tit">추모앨범</h2>
-        <ul class="gallery">
-          <li class="gallery-sizer"></li>
-          <li class="gallery-item">
-            <img src="/skin/images/gallery/gallery-default01.jpg" alt="" />
-            <button type="button" class="btn-vlarger">크게보기</button>
+        <h2 class="con-tit">방명록</h2>
+        <ul class="board-list">
+          <li>
+            <p class="name"><span>지인</span> 김태현</p>
+            <p class="tit">삼가 고인의 명복을 빕니다.</p>
+            <p class="date">2020-10-22 12:39</p>
+            <button type="button" class="btn-del">삭제</button>
           </li>
-          <li class="gallery-item">
-            <img src="/skin/images/gallery/gallery-default02.jpg" alt="" />
-            <button type="button" class="btn-vlarger">크게보기</button>
-          </li>
-          <li class="gallery-item">
-            <img src="/skin/images/gallery/gallery-default03.jpg" alt="" />
-            <button type="button" class="btn-vlarger">크게보기</button>
-          </li>
-          <li class="gallery-item">
-            <img src="/skin/images/gallery/gallery-default04.jpg" alt="" />
-            <button type="button" class="btn-vlarger">크게보기</button>
+          <li>
+            <p class="name"><span>지인</span> 김태현</p>
+            <p class="tit">삼가 애도를 표합니다.</p>
+            <p class="date">2020-10-22 12:39</p>
+            <button type="button" class="btn-del">삭제</button>
           </li>
         </ul>
+        <div class="con-btm">
+          <a type="button" class="btn btn-lg">방명록 작성</a>
+        </div>
       </div>
     </main>
   </div>
-  <script>
-    $(window).on('load', function(){
-      $('.gallery').masonry({
-        // options
-        columnWidth: '.gallery-sizer',
-        itemSelector: '.gallery-item',
-        percentPosition: true,
-        gutter: 8
-      });
-
-      $('.btn-vlarger').on('click', function () {
-        var viewImg = $(this).siblings('img').clone();
-        var viewDiv = `<div class="view-box-wrap">
-                        <div class="view-box">
-                          <button class="view-close">닫기</button>
-                        </div>
-                      </div>`;
-        $('body').append(viewDiv).addClass('no-scroll');
-        $('.view-box-wrap .view-box').append(viewImg);
-        
-      });
-
-      $(document).on('click','.view-close', function () {
-        $('.view-box-wrap').remove();
-        $('body').removeClass('no-scroll');
-      })
-    });
-  </script>
+  <div class="popup-wrap">
+    <div class="popup pw-box">
+      <p>
+        방명록 작성 시 입력하신<br />
+        비밀번호 4자리를 입력해주세요
+      </p>
+      <div class="pw-input">
+        <input type="password" />
+      </div>
+    </div>
+  </div>
 </body>
 </html>
