--- a/skin/info.html
+++ b/skin/info.html
@@ -25,7 +25,6 @@
   <link rel="stylesheet" href="/skin/css/skin.css">
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
-  <script src="//naver.github.io/egjs-infinitegrid/release/latest/dist/infinitegrid.gridlayout.min.js"></script>
   <script src="/skin/js/skin.js"></script>
 </head>
 <body class="">
@@ -72,56 +71,37 @@
         </div>
       </header>
       <div class="contents">
-        <h2 class="con-tit">추모앨범</h2>
-        <ul class="gallery">
-          <li class="gallery-sizer"></li>
-          <li class="gallery-item">
-            <img src="/skin/images/gallery/gallery-default01.jpg" alt="" />
-            <button type="button" class="btn-vlarger">크게보기</button>
-          </li>
-          <li class="gallery-item">
-            <img src="/skin/images/gallery/gallery-default02.jpg" alt="" />
-            <button type="button" class="btn-vlarger">크게보기</button>
-          </li>
-          <li class="gallery-item">
-            <img src="/skin/images/gallery/gallery-default03.jpg" alt="" />
-            <button type="button" class="btn-vlarger">크게보기</button>
-          </li>
-          <li class="gallery-item">
-            <img src="/skin/images/gallery/gallery-default04.jpg" alt="" />
-            <button type="button" class="btn-vlarger">크게보기</button>
-          </li>
+        <h2 class="con-tit">장례정보</h2>
+        <table class="table-info">
+          <caption>고인, 상주, 빈소, 발인, 장지 정보</caption>
+          <tr>
+            <th scope="row">고인</th>
+            <td>홍길동</td>
+          </tr>
+          <tr>
+            <th scope="row">상주</th>
+            <td>홍상주</td>
+          </tr>
+          <tr>
+            <th scope="row">빈소</th>
+            <td>서울 대학교 장례식장 1호실</td>
+          </tr>
+          <tr>
+            <th scope="row">발인</th>
+            <td>2020.12.25 11:00</td>
+          </tr>
+          <tr>
+            <th scope="row">장지</th>
+            <td>서울 서산</td>
+          </tr>
+        </table>
+        <h3 class="con-sub-tit">유가족</h3>
+        <ul class="fam-list">
+          <li><p><span>아들</span><em>홍상주</em></p><a class="btn-call" href="tel:000-0000">전화걸기</a></li>
+          <li><p><span>딸</span><em>홍공주</em></p><a class="btn-call" href="tel:000-0000">전화걸기</a></li>
         </ul>
       </div>
     </main>
   </div>
-  <script>
-    $(window).on('load', function(){
-      $('.gallery').masonry({
-        // options
-        columnWidth: '.gallery-sizer',
-        itemSelector: '.gallery-item',
-        percentPosition: true,
-        gutter: 8
-      });
-
-      $('.btn-vlarger').on('click', function () {
-        var viewImg = $(this).siblings('img').clone();
-        var viewDiv = `<div class="view-box-wrap">
-                        <div class="view-box">
-                          <button class="view-close">닫기</button>
-                        </div>
-                      </div>`;
-        $('body').append(viewDiv).addClass('no-scroll');
-        $('.view-box-wrap .view-box').append(viewImg);
-        
-      });
-
-      $(document).on('click','.view-close', function () {
-        $('.view-box-wrap').remove();
-        $('body').removeClass('no-scroll');
-      })
-    });
-  </script>
 </body>
 </html>
