--- a/skin/map.html
+++ b/skin/map.html
@@ -25,11 +25,10 @@
   <link rel="stylesheet" href="/skin/css/skin.css">
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
-  <script src="//naver.github.io/egjs-infinitegrid/release/latest/dist/infinitegrid.gridlayout.min.js"></script>
   <script src="/skin/js/skin.js"></script>
 </head>
 <body class="">
-  <div class="wrap">
+  <div class="wrap fix-btm">
     <header class="header">
       <div class="fix-box">
         <a href="" class="btn-back"><span></span></a>
@@ -72,56 +71,26 @@
         </div>
       </header>
       <div class="contents">
-        <h2 class="con-tit">추모앨범</h2>
-        <ul class="gallery">
-          <li class="gallery-sizer"></li>
-          <li class="gallery-item">
-            <img src="/skin/images/gallery/gallery-default01.jpg" alt="" />
-            <button type="button" class="btn-vlarger">크게보기</button>
-          </li>
-          <li class="gallery-item">
-            <img src="/skin/images/gallery/gallery-default02.jpg" alt="" />
-            <button type="button" class="btn-vlarger">크게보기</button>
-          </li>
-          <li class="gallery-item">
-            <img src="/skin/images/gallery/gallery-default03.jpg" alt="" />
-            <button type="button" class="btn-vlarger">크게보기</button>
-          </li>
-          <li class="gallery-item">
-            <img src="/skin/images/gallery/gallery-default04.jpg" alt="" />
-            <button type="button" class="btn-vlarger">크게보기</button>
-          </li>
-        </ul>
+        <h2 class="con-tit">오시는길</h2>
+        <div class="map-box">
+          <!-- map 영역 -->
+        </div>
+        <table class="table-info">
+          <caption>주소, 상주 정보</caption>
+          <tr>
+            <th scope="row">주소</th>
+            <td>서울특별시 서초구 삼임당로 17길 99 하이센스빌딩 4층 에이튜드</td>
+          </tr>
+          <tr>
+            <th scope="row">상주</th>
+            <td>홍상주</td>
+          </tr>
+        </table>
+        <div class="con-btm">
+          <a class="btn btn-lg btn-call" href="tel:000-0000">상주에게 전화걸기</a>
+        </div>
       </div>
     </main>
   </div>
-  <script>
-    $(window).on('load', function(){
-      $('.gallery').masonry({
-        // options
-        columnWidth: '.gallery-sizer',
-        itemSelector: '.gallery-item',
-        percentPosition: true,
-        gutter: 8
-      });
-
-      $('.btn-vlarger').on('click', function () {
-        var viewImg = $(this).siblings('img').clone();
-        var viewDiv = `<div class="view-box-wrap">
-                        <div class="view-box">
-                          <button class="view-close">닫기</button>
-                        </div>
-                      </div>`;
-        $('body').append(viewDiv).addClass('no-scroll');
-        $('.view-box-wrap .view-box').append(viewImg);
-        
-      });
-
-      $(document).on('click','.view-close', function () {
-        $('.view-box-wrap').remove();
-        $('body').removeClass('no-scroll');
-      })
-    });
-  </script>
 </body>
 </html>
