--- a/skin/payment.html
+++ b/skin/payment.html
@@ -25,11 +25,10 @@
   <link rel="stylesheet" href="/skin/css/skin.css">
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
-  <script src="//naver.github.io/egjs-infinitegrid/release/latest/dist/infinitegrid.gridlayout.min.js"></script>
   <script src="/skin/js/skin.js"></script>
 </head>
 <body class="">
-  <div class="wrap">
+  <div class="wrap payment">
     <header class="header">
       <div class="fix-box">
         <a href="" class="btn-back"><span></span></a>
@@ -72,56 +71,36 @@
         </div>
       </header>
       <div class="contents">
-        <h2 class="con-tit">추모앨범</h2>
-        <ul class="gallery">
-          <li class="gallery-sizer"></li>
-          <li class="gallery-item">
-            <img src="/skin/images/gallery/gallery-default01.jpg" alt="" />
-            <button type="button" class="btn-vlarger">크게보기</button>
+        <h2 class="con-tit">조의금보내기</h2>
+        <p class="sub-txt">
+          부득이 조문을 못오는 조문객들이나<br />
+          직접 전달이 여의치 않은 분들을 위해<br />
+          <strong>정중하게 조의금을 전달 할 수 있도록 제공됩니다.</strong>
+        </p>
+        <dl class="deadline">
+          <dt>조의금마감</dt>
+          <dd>제한없음</dd>
+        </dl>
+        <ul class="acc-list">
+          <li>
+            <h3><span>아들</span>홍상주</h3>
+            <dl>
+              <dt>기업은행</dt>
+              <dd>228383-028202-0228-12</dd>
+            </dl>
+            <button type="button" class="btn-copy">계죄번호 복사</button>
           </li>
-          <li class="gallery-item">
-            <img src="/skin/images/gallery/gallery-default02.jpg" alt="" />
-            <button type="button" class="btn-vlarger">크게보기</button>
-          </li>
-          <li class="gallery-item">
-            <img src="/skin/images/gallery/gallery-default03.jpg" alt="" />
-            <button type="button" class="btn-vlarger">크게보기</button>
-          </li>
-          <li class="gallery-item">
-            <img src="/skin/images/gallery/gallery-default04.jpg" alt="" />
-            <button type="button" class="btn-vlarger">크게보기</button>
+          <li>
+            <h3><span>아들</span>홍상주</h3>
+            <dl>
+              <dt>기업은행</dt>
+              <dd>228383-028202-0228-12</dd>
+            </dl>
+            <button type="button" class="btn-copy">계죄번호 복사</button>
           </li>
         </ul>
       </div>
     </main>
   </div>
-  <script>
-    $(window).on('load', function(){
-      $('.gallery').masonry({
-        // options
-        columnWidth: '.gallery-sizer',
-        itemSelector: '.gallery-item',
-        percentPosition: true,
-        gutter: 8
-      });
-
-      $('.btn-vlarger').on('click', function () {
-        var viewImg = $(this).siblings('img').clone();
-        var viewDiv = `<div class="view-box-wrap">
-                        <div class="view-box">
-                          <button class="view-close">닫기</button>
-                        </div>
-                      </div>`;
-        $('body').append(viewDiv).addClass('no-scroll');
-        $('.view-box-wrap .view-box').append(viewImg);
-        
-      });
-
-      $(document).on('click','.view-close', function () {
-        $('.view-box-wrap').remove();
-        $('body').removeClass('no-scroll');
-      })
-    });
-  </script>
 </body>
 </html>
