--- a/skin/write.html
+++ b/skin/write.html
@@ -25,11 +25,10 @@
   <link rel="stylesheet" href="/skin/css/skin.css">
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
-  <script src="//naver.github.io/egjs-infinitegrid/release/latest/dist/infinitegrid.gridlayout.min.js"></script>
   <script src="/skin/js/skin.js"></script>
 </head>
 <body class="">
-  <div class="wrap">
+  <div class="wrap fix-btm write">
     <header class="header">
       <div class="fix-box">
         <a href="" class="btn-back"><span></span></a>
@@ -72,56 +71,37 @@
         </div>
       </header>
       <div class="contents">
-        <h2 class="con-tit">추모앨범</h2>
-        <ul class="gallery">
-          <li class="gallery-sizer"></li>
-          <li class="gallery-item">
-            <img src="/skin/images/gallery/gallery-default01.jpg" alt="" />
-            <button type="button" class="btn-vlarger">크게보기</button>
-          </li>
-          <li class="gallery-item">
-            <img src="/skin/images/gallery/gallery-default02.jpg" alt="" />
-            <button type="button" class="btn-vlarger">크게보기</button>
-          </li>
-          <li class="gallery-item">
-            <img src="/skin/images/gallery/gallery-default03.jpg" alt="" />
-            <button type="button" class="btn-vlarger">크게보기</button>
-          </li>
-          <li class="gallery-item">
-            <img src="/skin/images/gallery/gallery-default04.jpg" alt="" />
-            <button type="button" class="btn-vlarger">크게보기</button>
-          </li>
-        </ul>
+        <h2 class="con-tit">방명록 작성</h2>
+        <form action="">
+          <div class="input-row">
+            <label for="">성명</label>
+            <input type="text" placeholder="성명을 입력하세요" />
+          </div>
+          <div class="input-row">
+            <label for="">조문메세지</label>
+            <select name="" id="">
+              <option value="" disabled selected>선택</option>
+              <option value="삼가 고인의 명복을 빕니다.">삼가 고인의 명복을 빕니다.</option>
+              <option value="삼가 애도를 표합니다.">삼가 애도를 표합니다.</option>
+              <option value="삼가 조의를 표합니다.">삼가 조의를 표합니다.</option>
+            </select>
+            <input type="text" placeholder="내용을 입력하세요" />
+          </div>
+          <div class="input-row">
+            <label for="">비밀번호 <span>(방명록 삭제 시 사용)</span></label>
+            <input type="password" placeholder="비밀번호 4자리를 입력하세요" title="비밀번호 4자리 입력" />
+          </div>
+          <div class="input-row">
+            <label for="">관계<span>(선택)</span></label>
+            <input type="text" placeholder="소속 또는 관계" />
+          </div>
+        </form>
+        <div class="con-btm">
+          <button type="button" class="btn btn-regular">취소</button>
+          <button type="button" class="btn">작성완료</button>
+        </div>
       </div>
     </main>
   </div>
-  <script>
-    $(window).on('load', function(){
-      $('.gallery').masonry({
-        // options
-        columnWidth: '.gallery-sizer',
-        itemSelector: '.gallery-item',
-        percentPosition: true,
-        gutter: 8
-      });
-
-      $('.btn-vlarger').on('click', function () {
-        var viewImg = $(this).siblings('img').clone();
-        var viewDiv = `<div class="view-box-wrap">
-                        <div class="view-box">
-                          <button class="view-close">닫기</button>
-                        </div>
-                      </div>`;
-        $('body').append(viewDiv).addClass('no-scroll');
-        $('.view-box-wrap .view-box').append(viewImg);
-        
-      });
-
-      $(document).on('click','.view-close', function () {
-        $('.view-box-wrap').remove();
-        $('body').removeClass('no-scroll');
-      })
-    });
-  </script>
 </body>
 </html>
