--- a/skin/card_white.html
+++ b/skin/card_white.html
@@ -27,50 +27,42 @@
   <script src="/skin/js/skin.js"></script>
 </head>
 <body class="">
-  <div class="wrap">
-    <header class="header">
-      <div class="fix-box">
-        <a href="" class="btn-back"><span></span></a>
-        <h1 class="logo"><a href="">해와달</a></h1>
-        <button type="button" class="btn-m-toggle">
-          <span class="bar"></span>
-        </button>
-      </div>
-      <nav class="menu-list">
-        <ul>
-          <li><a href="">부고장</a></li>
-          <li><a href="">추모앨범</a></li>
-          <li><a href="">장례정보</a></li>
-          <li><a href="">조의금보내기</a></li>
-          <li><a href="">방명록</a></li>
-          <li><a href="">조문예절</a></li>
-          <li><a href="">오시는길</a></li>
-        </ul>
-      </nav>
-    </header>
-    <main class="contents-wrap">
-      <header class="info-head">
-        <div class="inner">
-          <h2 class="name">故 홍길동</h2>
-          <div class="info">
-            <dl>
-              <dt>입관</dt>
-              <dd>2019.12.23 14:20</dd>
-            </dl>
-            <dl>
-              <dt>발인</dt>
-              <dd>2019.12.23 14:20</dd>
-            </dl>
-            <dl>
-              <dt>상주</dt>
-              <dd>홍상주</dd>
-            </dl>
+  <div class="wrap card-wrap white">
+    <div class="card">
+      <div class="visual">
+        <div class="img-wrap">
+          <img src="/skin/images/common/img-cover.png" alt="" class="cover-img">
+          <div class="img-box">
+            <img src="/skin/images/thumb1.png" onload="setDirection(this)" alt="">
           </div>
         </div>
-      </header>
-      <div class="contents">
+        <h2><em>홍길동님께서</em> 영면하셨기에 삼가 알려드립니다</h2>
       </div>
-    </main>
+      <div class="info-list">
+        <dl>
+          <dt>고인</dt>
+          <dd>홍길동 (향년 80세)</dd>
+        </dl>
+        <dl>
+          <dt>상주</dt>
+          <dd>홍상주</dd>
+        </dl>
+        <dl>
+          <dt>빈소</dt>
+          <dd>서울대학교병원 장례식장 1호실</dd>
+        </dl>
+        <dl>
+          <dt>발인</dt>
+          <dd>2020년 8월 20일 오후 11:00</dd>
+        </dl>
+        <dl>
+          <dt>장지</dt>
+          <dd>서울추모공원</dd>
+        </dl>
+      </div>
+    </div>
+    <a href="" class="btn btn-lg btn-card">조문하기</a>
   </div>
+
 </body>
 </html>
