--- a/skin/card_basic.html
+++ b/skin/card_basic.html
@@ -26,60 +26,40 @@
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="/skin/js/skin.js"></script>
 </head>
-<body class="main">
-  <div class="wrap">
-    <header class="header">
-      <div class="fix-box">
-        <a href="" class="btn-back"><span></span></a>
-        <h1 class="logo"><a href="/skin/main.html">해와달</a></h1>
-        <button type="button" class="btn-m-toggle">
-          <span class="bar"></span>
-        </button>
-      </div>
-      <nav class="menu-list">
-        <ul>
-          <li><a href="/skin/card_basic.html">부고장</a></li>
-          <li><a href="/skin/gallery.html">추모앨범</a></li>
-          <li><a href="/skin/info.html">장례정보</a></li>
-          <li><a href="/skin/payment.html">조의금보내기</a></li>
-          <li><a href="/skin/guest.html">방명록</a></li>
-          <li><a href="/skin/manner.html">조문예절</a></li>
-          <li><a href="/skin/map.html">오시는길</a></li>
-        </ul>
-      </nav>
-    </header>
-    <main class="contents-wrap">
-      <header class="info-head">
-        <div class="inner">
-          <h2 class="name">故 홍길동</h2>
-          <div class="info">
-            <dl>
-              <dt>입관</dt>
-              <dd>2019.12.23 14:20</dd>
-            </dl>
-            <dl>
-              <dt>발인</dt>
-              <dd>2019.12.23 14:20</dd>
-            </dl>
-            <dl>
-              <dt>상주</dt>
-              <dd>홍상주</dd>
-            </dl>
-          </div>
+<body class="">
+  <div class="wrap card-wrap basic">
+    <h1 class="logo">해와달</h1>
+    <div class="basic-box">
+      <div class="card">
+        <div class="visual">
+          <img src="/skin/images/common/img-card-basic.png" alt="">
+          <h2><em>홍길동님께서</em> 영면하셨기에 삼가 알려드립니다</h2>
         </div>
-      </header>
-      <div class="contents">
-        <ul class="main-gate">
-          <li><a href="">부고장</a></li>
-          <li><a href="">추모앨범</a></li>
-          <li><a href="">장례정보</a></li>
-          <li><a href="">조의금보내기</a></li>
-          <li><a href="">방명록</a></li>
-          <li><a href="">조문예절</a></li>
-          <li><a href="">오시는길</a></li>
-        </ul>
+        <div class="info-list">
+          <dl>
+            <dt>고인</dt>
+            <dd>홍길동 (향년 80세)</dd>
+          </dl>
+          <dl>
+            <dt>상주</dt>
+            <dd>홍상주</dd>
+          </dl>
+          <dl>
+            <dt>빈소</dt>
+            <dd>서울대학교병원 장례식장 1호실</dd>
+          </dl>
+          <dl>
+            <dt>발인</dt>
+            <dd>2020년 8월 20일 오후 11:00</dd>
+          </dl>
+          <dl>
+            <dt>장지</dt>
+            <dd>서울추모공원</dd>
+          </dl>
+        </div>
       </div>
-    </main>
+    </div>
+    <a href="" class="btn btn-lg btn-card">조문하기</a>
   </div>
 </body>
 </html>
