--- a/skin/gallery.html
+++ b/skin/gallery.html
@@ -33,20 +33,20 @@
     <header class="header">
       <div class="fix-box">
         <a href="" class="btn-back"><span></span></a>
-        <h1 class="logo"><a href="">해와달</a></h1>
+        <h1 class="logo"><a href="/skin/main.html">해와달</a></h1>
         <button type="button" class="btn-m-toggle">
           <span class="bar"></span>
         </button>
       </div>
       <nav class="menu-list">
         <ul>
-          <li><a href="">부고장</a></li>
-          <li><a href="">추모앨범</a></li>
-          <li><a href="">장례정보</a></li>
-          <li><a href="">조의금보내기</a></li>
-          <li><a href="">방명록</a></li>
-          <li><a href="">조문예절</a></li>
-          <li><a href="">오시는길</a></li>
+          <li><a href="/skin/card_basic.html">부고장</a></li>
+          <li><a href="/skin/gallery.html">추모앨범</a></li>
+          <li><a href="/skin/info.html">장례정보</a></li>
+          <li><a href="/skin/payment.html">조의금보내기</a></li>
+          <li><a href="/skin/guest.html">방명록</a></li>
+          <li><a href="/skin/manner.html">조문예절</a></li>
+          <li><a href="/skin/map.html">오시는길</a></li>
         </ul>
       </nav>
     </header>
@@ -105,23 +105,23 @@
         gutter: 8
       });
 
-      $('.btn-vlarger').on('click', function () {
-        var viewImg = $(this).siblings('img').clone();
-        var viewDiv = `<div class="view-box-wrap">
-                        <div class="view-box">
-                          <button class="view-close">닫기</button>
-                        </div>
-                      </div>`;
-        $('body').append(viewDiv).addClass('no-scroll');
-        $('.view-box-wrap .view-box').append(viewImg);
-        
-      });
-
-      $(document).on('click','.view-close', function () {
-        $('.view-box-wrap').remove();
-        $('body').removeClass('no-scroll');
-      })
     });
+    $('.btn-vlarger').on('click', function () {
+      var viewImg = $(this).siblings('img').clone();
+      var viewDiv = `<div class="view-box-wrap">
+                      <div class="view-box">
+                        <button class="view-close">닫기</button>
+                      </div>
+                    </div>`;
+      $('body').append(viewDiv).addClass('no-scroll');
+      $('.view-box-wrap .view-box').append(viewImg);
+      
+    });
+
+    $(document).on('click','.view-close', function () {
+      $('.view-box-wrap').remove();
+      $('body').removeClass('no-scroll');
+    })
   </script>
 </body>
 </html>
