--- a/skin/map.html
+++ b/skin/map.html
@@ -32,20 +32,20 @@
     <header class="header">
       <div class="fix-box">
         <a href="" class="btn-back"><span></span></a>
-        <h1 class="logo"><a href="">해와달</a></h1>
+        <h1 class="logo"><a href="/skin/main.html">해와달</a></h1>
         <button type="button" class="btn-m-toggle">
           <span class="bar"></span>
         </button>
       </div>
       <nav class="menu-list">
         <ul>
-          <li><a href="">부고장</a></li>
-          <li><a href="">추모앨범</a></li>
-          <li><a href="">장례정보</a></li>
-          <li><a href="">조의금보내기</a></li>
-          <li><a href="">방명록</a></li>
-          <li><a href="">조문예절</a></li>
-          <li><a href="">오시는길</a></li>
+          <li><a href="/skin/card_basic.html">부고장</a></li>
+          <li><a href="/skin/gallery.html">추모앨범</a></li>
+          <li><a href="/skin/info.html">장례정보</a></li>
+          <li><a href="/skin/payment.html">조의금보내기</a></li>
+          <li><a href="/skin/guest.html">방명록</a></li>
+          <li><a href="/skin/manner.html">조문예절</a></li>
+          <li><a href="/skin/map.html">오시는길</a></li>
         </ul>
       </nav>
     </header>
