--- a/skin/gallery.html
+++ b/skin/gallery.html
@@ -24,8 +24,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Serif+KR:400,500,700&display=swap&subset=korean">
   <link rel="stylesheet" href="/skin/css/skin.css">
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-  <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
-  <script src="//naver.github.io/egjs-infinitegrid/release/latest/dist/infinitegrid.gridlayout.min.js"></script>
+  <script src="/skin/js/masonry.pkgd.js"></script>
   <script src="/skin/js/skin.js"></script>
 </head>
 <body class="">
@@ -96,28 +95,29 @@
     </main>
   </div>
   <script>
+    // gallery 이미지 그리드
     $(window).on('load', function(){
-      $('.gallery').masonry({
-        // options
+      var $grid = $('.gallery').masonry({
         columnWidth: '.gallery-sizer',
         itemSelector: '.gallery-item',
-        percentPosition: true,
         gutter: 8
       });
-
     });
+
+    // 크게보기 
     $('.btn-vlarger').on('click', function () {
       var viewImg = $(this).siblings('img').clone();
-      var viewDiv = `<div class="view-box-wrap">
-                      <div class="view-box">
-                        <button class="view-close">닫기</button>
-                      </div>
-                    </div>`;
+      var viewDiv = '<div class="view-box-wrap">\
+                      <div class="view-box">\
+                        <button class="view-close">닫기</button>\
+                      </div>\
+                    </div>';
       $('body').append(viewDiv).addClass('no-scroll');
       $('.view-box-wrap .view-box').append(viewImg);
       
     });
 
+    // 크게보기 닫기
     $(document).on('click','.view-close', function () {
       $('.view-box-wrap').remove();
       $('body').removeClass('no-scroll');
