--- a/skin/card_basic.html
+++ b/skin/card_basic.html
@@ -27,6 +27,7 @@
   <script src="/skin/js/skin.js"></script>
 </head>
 <body class="">
+  <!-- 부고장 스킨별 class div.wrap에 적용 white / black / basic -->
   <div class="wrap card-wrap basic">
     <h1 class="logo">해와달</h1>
     <div class="basic-box">
