--- a/skin/manner.html
+++ b/skin/manner.html
@@ -27,6 +27,7 @@
   <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
   <script src="/skin/js/skin.js"></script>
 </head>
+<!-- default 테마 balck / white 테마일 경우 body에 "white" class 추가 -->
 <body class="">
   <div class="wrap manner">
     <header class="header">
