--- a/skin/card_black.html
+++ b/skin/card_black.html
@@ -27,6 +27,7 @@
   <script src="/skin/js/skin.js"></script>
 </head>
 <body class="">
+  <!-- 부고장 스킨별 class div.wrap에 적용 white / black / basic -->
   <div class="wrap card-wrap black">
     <div class="card">
       <div class="visual">
