--- a/skin/gallery.html
+++ b/skin/gallery.html
@@ -27,6 +27,7 @@
   <script src="/skin/js/masonry.pkgd.js"></script>
   <script src="/skin/js/skin.js"></script>
 </head>
+<!-- default 테마 balck / white 테마일 경우 body에 "white" class 추가 -->
 <body class="">
   <div class="wrap">
     <header class="header">
