--- a/skin/main.html
+++ b/skin/main.html
@@ -26,6 +26,7 @@
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="/skin/js/skin.js"></script>
 </head>
+<!-- default 테마 balck / white 테마일 경우 body에 "white" class 추가 -->
 <body class="main">
   <div class="wrap">
     <header class="header">
