--- a/skin/map.html
+++ b/skin/map.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=750">
+  <meta name="viewport" content="width=750, initial-scale=1, maximum-scale=1, user-scalable=0">
   <title>해와달</title>
   <meta name="title" content="모바일장례식 해와달" />
   <meta name="Keywords"
