--- a/MyPage/skinset.html
+++ b/MyPage/skinset.html
@@ -161,7 +161,7 @@
             <tbody>
               <tr>
                 <th scope="row">
-                  <label for="txtODName">고인명(연령)</label>
+                  <label for="txtODName">고인명(연령)<em class="required">*필수</em></label>
                 </th>
                 <td>
                   <input type="text" id="txtODName" class="col-md-8" />
@@ -193,7 +193,7 @@
                 </td>
               </tr>
               <tr>
-                <th scope="row">유가족</th>
+                <th scope="row">유가족<em class="required">*필수</em></th>
                 <td class="fam-list-wrap row-wrap">
                   <div class="fam-list">
                     <div class="form-row">
