--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   <script src="/js/jquery.fullPage.js"></script>
   <script src="/js/scrolloverflow.min.js"></script>
   <script src="/js/slick.js"></script>
+  <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script> 
   <script src="/js/main.js"></script>
   <link rel="stylesheet" href="/css/fullpage.css">
   <link rel="stylesheet" href="/css/slick.css">
@@ -82,8 +83,11 @@
         <span class="bar"></span>
       </button>
     </header>
+
     <div class="fullpage-wrap">
       <section class="fp-section intro">
+        <div class="bg-wrap"></div>
+        <div id="particles-js"></div>
         <div class="con-wrap">
           <div class="sec-copy">
             <em>직접 조문이 어려울 때</em>
@@ -91,8 +95,14 @@
             <p>직접 조문이 어려울 때 직접 조문이 어려울 때직접 조문이 어려울 때직접 조문이 어려울 때직접 조문이 어려울 때</p>
           </div>
         </div>
-      </section>
+        <button class="scroll-arrow">
+          <span class="arrow"></span>
+          <span class="arrow"></span>
+          <span class="arrow"></span>
+        </button>
+      </section><!-- //.fp-section.intro -->
       <section class="fp-section service">
+        <div class="bg-wrap"></div>
         <div class="con-wrap">
           <div class="sec-copy">
             <h2>모바일 장례식장</h2>
@@ -133,8 +143,14 @@
             </div>
           </div>
         </div>
-      </section>
+        <button class="scroll-arrow">
+          <span class="arrow"></span>
+          <span class="arrow"></span>
+          <span class="arrow"></span>
+        </button>
+      </section><!-- //.fp-section.service -->
       <section class="fp-section use-step">
+        <div class="bg-wrap"></div>
         <div class="con-wrap">
           <div class="sec-copy">
             <h2><em>모바일 장례식장 해와달</em> <strong>이렇게 이용하세요!</strong></h2>
@@ -161,8 +177,14 @@
             <p>제공된 URL로 지인들에게 카톡/문자 전송</p>
           </div>
         </div>
-      </section>
+        <button class="scroll-arrow">
+          <span class="arrow"></span>
+          <span class="arrow"></span>
+          <span class="arrow"></span>
+        </button>
+      </section><!-- //.fp-section.use-step -->
       <section class="fp-section screen-guide">
+        <div class="bg-wrap"></div>
         <div class="con-wrap">
           <div class="sec-copy">
             <h2><em>모바일 장례식장</em> <strong>조문객 이용가이드</strong></h2>
@@ -227,7 +249,12 @@
             </div>
           </div>
         </div>
-      </section>
+        <button class="scroll-arrow">
+          <span class="arrow"></span>
+          <span class="arrow"></span>
+          <span class="arrow"></span>
+        </button>
+      </section><!-- //.fp-section.screen-guide -->
       <div class="fp-section fp-auto-height">
       <footer  ter class="footer">
         <ul class="list-info">
@@ -249,15 +276,6 @@
       </div>
     </div>
     <a href="/Apply/apply_sample.html" class="shortcut">샘플<br />보러가기</a>
-  </div>
-  <div class="load-wrap intro">
-    <div class="con-wrap">
-      <div class="sec-copy">
-        <em>직접 조문이 어려울 때</em>
-        <h2>모바일 장례식장 <strong>해와달</strong></h2>
-        <p>직접 조문이 어려울 때 직접 조문이 어려울 때직접 조문이 어려울 때직접 조문이 어려울 때직접 조문이 어려울 때</p>
-      </div>
-    </div>
   </div>
 </body>
 </html>
