--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <script src="/js/jquery.fullPage.js"></script>
   <script src="/js/scrolloverflow.min.js"></script>
   <script src="/js/slick.js"></script>
-  <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script> 
+  <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script> 
   <script src="/js/main.js"></script>
   <link rel="stylesheet" href="/css/fullpage.css">
   <link rel="stylesheet" href="/css/slick.css">
