--- a/MyPage/skinset.html
+++ b/MyPage/skinset.html
@@ -32,7 +32,7 @@
   <link rel="stylesheet" href="/css/sub.css" />
 </head>
 
-<body>
+<body class="page-form">
   <div class="wrap sub-wrap">
     <header class="header">
       <nav class="hd-navbar">
@@ -260,7 +260,7 @@
                 <th>장례식장 주소</th>
                 <td class="flx-wrap">
                   <div class="form-row">
-                    <input type="text" class="col-md-6" placeholder="주소검색" title="주소검색" />
+                    <input type="text" class="col-md-12" placeholder="주소검색" title="주소검색" />
                     <a href="" class="btn btn-regular">검색</a>
                   </div>
                   <div class="form-row flx-md-wrap">
