--- a/MyPage/update.html
+++ b/MyPage/update.html
@@ -31,7 +31,7 @@
   <link rel="stylesheet" href="/css/sub.css">
 </head>
 
-<body>
+<body class="page-form">
   <div class="wrap sub-wrap">
     <header class="header">
       <nav class="hd-navbar">
